--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <!--end desktop-->
 
     <!--Start mobil-->
-    <div class="mobil row m-2 align-items-center justify-content-center">
+    <div class="mobil row m-2 align-items-start justify-content-center">
       <div class="col-3">
         <div class="d-flex">
           <img src="img/Frame 11.svg" class="img-fluid ">
@@ -188,7 +188,7 @@
     </div>
   </main>
   <section>
-    <div class="container-xxl container-xl">
+    <div class="container-xxl container-xl container">
       <article>
         <h2>КАК ЗАКАЗАТЬ ВЕРИФИКАЦИЮ?</h2>
         <p class="text">
@@ -239,7 +239,7 @@
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
               </div>
               <div class="col-md-12">
-                <button type="button" class="btn btn-primary w-100 mt-3">оставить заявку</button>
+                <button type="submit" class="btn btn-primary w-100 mt-3">оставить заявку</button>
               </div>
             </div>
           </form>
@@ -270,6 +270,26 @@
           <span class="text-wrapper-8">Также мы с удовольствием предоставим вам поддержку по вопросам открытия счетов,
             подтверждения адреса и
             любых других вопросов связанных с верификаций и подтверждением.</span>
+        </p>
+      </article>
+      <article>
+        <h2>Как происходит верификация?</h2>
+        <p class="text">
+          вы будете проходить верификацию под вашими Фио и с вашим фото (вариант, который мы рекомендуем);        </p>
+        <ul>
+          <li>
+            <p class="text">
+              <i class="bi bi-circle-fill"></i><i class="bi bi-circle-fill"></i><i class="bi bi-circle-fill"></i>id
+              под вашим Фио, но с чужим фото;            </p>
+          </li>
+          <li>
+            <p class="text">
+              <i class="bi bi-circle-fill"></i><i class="bi bi-circle-fill"></i><i class="bi bi-circle-fill"></i>
+              с вашим фото, но чужим Фио;          </li>
+         
+        </ul>
+        <p class="text-wrapper-20">
+          Потребности и задачи у всех разные, поэтому заранее определить, что именно лучше не зная потенциальной ситуации практически невозможно.
         </p>
       </article>
       <article>
@@ -316,26 +336,26 @@
         </p>
       </article>
       <div class=" otzivi bg-dark row p-4 align-items-center">
-        <div class="text col-md-3 text-center">
+        <div class="text col-md-3 col-12 text-center">
           <h5 class="text-white text-uppercase">ЛУЧШИЕ В СВОЕМ ДЕЛЕ, 5 БАЛЛОВ И НЕ МЕНЬШЕ!</h5>
           <img src="img/frame-39.svg">
         </div>
-        <div class="col-md-8">
-          <div class="row justify-content-between">
-            <div class="col-md-3 col-12 bg-white text-center p-3">
+        <div class="col-md-8 col-12 mt-md-0 mt-4">
+          <div class=" d-md-flex d-block gap-4 justify-content-between">
+            <div class=" bg-white text-center">
               <img src="img/frame-11-3.svg ">
               <h4 class="text-primary">Надежно</h4>
               <p class="text">Любой вид отчетного документа по самой выгодной цене</p>
             </div>
-            <div class="col-md-3 col-12 bg-white text-center p-3">
-              <img src="img/frame-11-3.svg">
+            <div class=" bg-white text-center ">
+              <img src="img/frame-11-2.svg">
               <h4 class="text-primary">Надежно</h4>
-              <p class="">Любой вид отчетного документа по самой выгодной цене</p>
+              <p class="text">Любой вид отчетного документа по самой выгодной цене</p>
             </div>
-            <div class="col-md-3 col-12  bg-white text-center p-3">
-              <img src="img/frame-11-3.svg">
+            <div class="bg-white text-center">
+              <img src="img/frame-11-1.svg">
               <h4 class="text-primary">Надежно</h4>
-              <p class="">Любой вид отчетного документа по самой выгодной цене</p>
+              <p class="text">Любой вид отчетного документа по самой выгодной цене</p>
             </div>
 
           </div>
@@ -389,7 +409,8 @@
                       </div>
                     </div>
                     <div class="owl-item">
-                      <div class="row flex-column">
+                      <div class="row flex-column
+                      ">
                         <div class="col-md-12 bg-dark text-white ">Какая-то статья 1, какая-то статья 1</div>
                         <div class="col-md-12 bg-dark text-white">Какая-то статья 1, какая-то статья 1</div>
                       </div>
@@ -412,6 +433,116 @@
 
     </div>
   </section>
+  <footer class="bg-dark mt-5">
+    <div class="container-md-xxl container">
+      <!--desktop uchun-->
+      <div class="row align-items-center desktop">
+        <div class="col-3">
+          <div class="logo">
+            <img src="img/logo.png" class="img-fluid">
+            <h1 class="logo_titel">РУСВЕРИФ</h1>
+            <p>Любые виды верификаций!</p>
+            <a class="btn btn-info w-100" href="tel:8 800 555-35-35">8 800 555-35-35</a>
+            <a class="btn btn-danger w-100" href="mailto:Rusverif@yandex.ru">Rusverif@yandex.ru</a>
+          </div>
+        </div>
+        <div class="col-6 p-md-2 menu-class">
+          <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Главная</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Цены</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Оплата и доставка</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled">Отзывы</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled">Контакты</a>
+                  </li>
+
+                </ul>
+              </div>
+            </div>
+          </nav>
+          
+
+        </div>
+        <div class="col-md-3 col-12 call-button-box">
+          <div class="call-button_grup">
+            <a class="call_button d-block" id="call_button">
+              <div class="callimg"> <img class="img-fluid" src="img/Traced Image.svg"></div>
+              <h4>Клик-клак</h4>
+              <p>И мы вам перезвоним!</p>
+
+
+            </a>
+          </div>
+
+        </div>
+      </div>
+    </div>
+    <!--end desktop-->
+
+    <!--Start mobil-->
+    <div class="mobil row m-2 align-items-center justify-content-between">
+      <div class="col-md-3">
+        <div class="row justify-content-between">
+          <img src="img/Frame 11.svg" class="img-fluid col-6 ">
+          <img src="img/Frame 15 (1).svg" class="img-fluid col-6">
+        </div>
+      </div>
+      <div class="col-6">
+        <div class="logo">
+          <img src="img/logo.png" class="img-fluid w-100">
+          <h1 class="logo_titel">РУСВЕРИФ</h1>
+          <p>Любые виды верификаций!</p>
+
+        </div>
+      </div>
+      <div class="col-3">
+        <nav class="navbar navbar-expand-lg">
+          <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">Главная</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Цены</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Оплата и доставка</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link disabled">Отзывы</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link disabled">Контакты</a>
+                </li>
+
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </div>
+
+    </div>
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
     crossorigin="anonymous"></script>
