--- a/tovar.html
+++ b/tovar.html
@@ -189,90 +189,37 @@
   </main>
   <section>
     <div class="container-xxl container-xl container">
-      <article>
-        <h2>КАК ЗАКАЗАТЬ ВЕРИФИКАЦИЮ?</h2>
-        <p class="text">
-          <span class="span">Дорогие друзья!</span>
-          <span class="text-wrapper-8">
-            Если вдруг у вас есть какие-либо предложения по сотрудничеству или вы не нашли нужный вам документ у нас
-            на сайте, вы оптовый клиент или хотите работать с нам на постоянной основе - мы сделаем всё, чтобы вам
-            было комфортно и в максимально сжатые сроки сделаем вам предложение, от которого вы не сможете
-            отказаться!<br></span>
-        </p>
-        <p class="text">
-          <span class="text-wrapper-8">Будьте абсолютно точно уверены, чтобы вы не захотели в рынке данных тематик,
-            именно мы сможем сделать вам
-            самое выгодное предложение и предоставить непревзойденное качество - работаем с клиентом до успеха, до
-            победы.<br></span>
-        </p>
-        <p class="text">
-          <span class="text-wrapper-8">Работая с другими сервисами вы рискуете столкнуться с перекупами, которые
-            закупают карточки у нас, и вы
-            просто-напросто переплатите и потеряете деньги, а из-за некачественного сервиса доставки еще и время. Так
-            как мир нас и так поставил в достаточно сложную ситуация, давайте будем экономными и не тратить деньги,
-            что зазря! Наши операторы ждут ваших звонков, а мы ждем ваших улыбок, хорошего настроения и благодарностей
-            дорогие друзья</span>
-        </p>
-      </article>
-      <div class="message row bg-white justify-content-center align-items-center p-md-3 p-2 mb-3">
-        <div class="col-md-3 col-12">
-          <div class="text-wraper">
-            <h4>Оставьте нам заявку прямо сейчас</h4>
-            <p>И наш оператор свяжется с Вами в течении 15 минут.</p>
-          </div>
+       <div class="contenet-carusel">
+           <h1></h1>
+        <div class="main-carousel owl-carousel">
+            <div class="item"><img src="/img/frame-11-3.svg" alt="Image 1"></div>
+            <div class="item"><img src="/img/frame-11-3.svg"alt="Image 2"></div>
+            <div class="item"><img src="/img/frame-11-3.svg" alt="Image 3"></div>
+            <!-- Добавьте другие элементы по вашему выбору -->
         </div>
-        <div class="col-md-1 arrow-messge ">
-          <img src="img/Arrow 1.svg" class="img-fluid w-50">
-
+        
+        <!-- Миниатюрный слайдер -->
+        <div class="thumbnail-carousel owl-carousel">
+            <div class="item"><img src="/img/frame-11-3.svg" alt="Image 1"></div>
+            <div class="item"><img src="/img/frame-11-3.svg" alt="Image 2"></div>
+            <div class="item"><img src="/img/frame-11-3.svg" alt="Image 3"></div>
+            <!-- Добавьте другие элементы по вашему выбору -->
         </div>
-        <div class="col-md-7">
-          <form action="">
-            <div class="form row align-items-center justify-content-between">
-              <div class="col-md-6">
-                <input class="form-control w-100 mb-3" type="text" placeholder="Имя*"
-                  aria-label="Disabled input example">
-                <input class="form-control" type="text" placeholder="Телефон или EMAIL*"
-                  aria-label="Disabled input example">
-
-              </div>
-              <div class="col-md-6">
-                <textarea class="form-control m-md-0 mt-3" id="exampleFormControlTextarea1" rows="3"></textarea>
-              </div>
-              <div class="col-md-12">
-                <button type="submit" class="btn btn-primary w-100 mt-3">оставить заявку</button>
-              </div>
-            </div>
-          </form>
-        </div>
-
-      </div>
-      <article>
-        <p class="text">
-          <span class="text-wrapper-8">После событий 22 года (а фактически за долго до) жителям Российской Федерации,
-            имеющим Российский
-            паспорт, из-за постоянного планомерного введения пакетов санкций со стороны запада и США, стало совсем не
-            просто проходить регистрации, верификации и подтверждать свою личность на всевозможных ресурсах и
-            сервисах.<br></span>
-        </p>
-        <p class="text">
-          <span class="text-wrapper-8">Наша команда пришла к вам на помощь! Мы играючи решим ваш вопрос по верификации
-            будь то крипто бирж
-            (Binance, coinbase Exchange, Kraken, KuCoin, Bitfinex, Bybit, Bitsmap, Gate.io, OKX, Huobi, Mexc,
-            WhiteBIT, LBank, Biconomy Exchange, Coincheck, BTCEX, Gemini, IndoEx, BitForex, SuperEx, Upbit, Currency,
-            XT, Hotbit и любые другие по вашему требованию и желанию); Банков и Нео банков Великобритании (Starling
-            Bank, Monzo, Revolut, Monese, bunq, Curve, Pockit, Wise), США (Chime, Current, Varo, Onjuno, Majority,
-            Capital One), Канада (Tangerine Bank, KOHO), ЕС (N26, Nuri, Tomorrow, Vivid Money), Германия (Fidor Bank,
-            Commerzbank, Comdirect, DKB), Швейцария (Neon, Yuh, CSX), Франция (Boursorama Banque, Nickel, Monabanq, Ma
-            French Bank, Fortuneo), Италия (Widiba, Hype, Buddybank, Illimity bank, Mooney), Бразилия (Nubank, Banco
-            Original, C6Bank, Banco BS2, Banco Inter), а также банки любых других стран и наименований.<br></span>
-        </p>
-        <p class="text">
-          <span class="text-wrapper-8">Также мы с удовольствием предоставим вам поддержку по вопросам открытия счетов,
-            подтверждения адреса и
-            любых других вопросов связанных с верификаций и подтверждением.</span>
-        </p>
-      </article>
-      <article>
+        <style>
+            /* Стили для миниатюрного слайдера */
+            .thumbnail-carousel .owl-stage-outer {
+                overflow: hidden;
+            }
+            .thumbnail-carousel .owl-item {
+                margin: 0;
+            }
+            .thumbnail-carousel .owl-dots {
+                text-align: center;
+                margin-top: 10px;
+            }
+        </style>
+       </div>
+        
         <h2>Как происходит верификация?</h2>
         <p class="text">
           вы будете проходить верификацию под вашими Фио и с вашим фото (вариант, который мы рекомендуем);        </p>
